@@ -1,5 +1,5 @@
 /************************************************************************
- * 
+ *
  * Copyright (C) 2010 - 2012
  *
  * [FX2ComponentCoordinator.java]
@@ -38,126 +38,162 @@ import org.jacp.javafx.rcp.util.FXUtil;
 
 /**
  * observe component actions and delegates to correct component
- * 
+ *
  * @author Andy Moncsek
  */
 public class FXComponentCoordinator extends AFXCoordinator implements
-		IComponentCoordinator<EventHandler<Event>, Event, Object> {
-	private IComponentHandler<ISubComponent<EventHandler<Event>, Event, Object>, IAction<Event, Object>> componentHandler;
-	private BlockingQueue<IDelegateDTO<Event, Object>> delegateQueue;
-	private String parentId;
+        IComponentCoordinator<EventHandler<Event>, Event, Object> {
+    private IComponentHandler<ISubComponent<EventHandler<Event>, Event, Object>, IAction<Event, Object>> componentHandler;
+    private BlockingQueue<IDelegateDTO<Event, Object>> delegateQueue;
+    private String parentId;
 
-	public FXComponentCoordinator() {
-		super("FXComponentCoordinator");
-	}
+    public FXComponentCoordinator() {
+        super("FXComponentCoordinator");
+    }
 
-	@Override
-	public void handleMessage(final String targetId,
-			final IAction<Event, Object> action) {
-			final ISubComponent<EventHandler<Event>, Event, Object> component = ComponentRegistry.findComponentById(targetId);
-			this.log(" //1.1// component message to: " + action.getTargetId());
-			if (component != null) {
-				this.log(" //1.1.1// component HIT: " + action.getTargetId());
-				this.handleComponentHit(targetId, action, component);
-			} // End if
-			else {
-				// delegate message to parent perspective
-				this.log(" //1.1.1// component MISS: " + action.getTargetId());
-				this.handleComponentMiss(targetId, action);
-			} // End else
-	}
+    @Override
+    public void handleMessage(final String targetId,
+                              final IAction<Event, Object> action) {
+        // check if local message
+        final boolean local = FXUtil.isLocalMessage(targetId);
+        if (!local) {
+            handleGlobalMessage(targetId,action);
+        } else {
+            // local message
+            handleLocalMessage(targetId,action);
+        }
 
-	/**
-	 * handle method if component was found in local context
-	 * 
-	 * @param targetId
-	 * @param action
-	 * @param component
-	 */
-	private void handleComponentHit(final String targetId,
-			final IAction<Event, Object> action,
-			final ISubComponent<EventHandler<Event>, Event, Object> component) {
-		if (component.isActive()) {
-			this.log(" //1.1.1.1// component HIT handle ACTIVE: "
-					+ action.getTargetId());
-			this.handleActive(component, action);
-		} // End if
-		else {
-			this.log(" //1.1.1.1// component HIT handle IN-ACTIVE: "
-					+ action.getTargetId());
-			this.handleInActive(component, action);
-		} // End else
-	}
+    }
+    /**
+     * Handles local messages like id=componentId.
+     */
+    private void handleLocalMessage(final String targetId,
+                                     final IAction<Event, Object> action) {
+        final ISubComponent<EventHandler<Event>, Event, Object> component = getTargetComponent(targetId, action);
+        final String targetPerspectiveId = component.getParentId();
+        if (this.parentId.equals(targetPerspectiveId)) {
+            this.log(" //1.1.1// component HIT: " + action.getTargetId());
+            this.handleComponentHit(targetId, action, component);
+        } else {
+            // search target component in an other perspective
+            this.delegateMessageToCorrectPerspective(targetId, action,
+                    this.delegateQueue);
+        }
+    }
 
-	/**
-	 * handle method if no valid component found; delegate to responsible
-	 * perspective
-	 * 
-	 * @param targetId
-	 * @param action
-	 */
-	private void handleComponentMiss(final String targetId,
-			final IAction<Event, Object> action) {
-		final boolean local = FXUtil.isLocalMessage(targetId);
-		if (!local) {
-			final String targetPerspectiveId = FXUtil
-					.getTargetPerspectiveId(targetId);
-			if (this.parentId.equals(targetPerspectiveId)) {
-				throw new UnsupportedOperationException(
-						"invalid component id handling not supported yet. Source: "
-								+ action.getSourceId() + " target: "
-								+ action.getTargetId());
-			}
-		}
-		// possible message to perspective
-		this.delegateMessageToCorrectPerspective(targetId, action,
-				this.delegateQueue);
+    /**
+     * Handles global messages like perspectiveId.componentId.
+     */
+    private void handleGlobalMessage(final String targetId,
+                                     final IAction<Event, Object> action) {
+        final String targetPerspectiveId = FXUtil
+                .getTargetPerspectiveId(targetId);
+        if (parentId.equals(targetPerspectiveId)) {
+            // target component is in current perspective
+            handleMessageInCurrentPerspective(targetId, action);
+        } else {
+            // target component is in an other perspective
+            this.delegateMessageToCorrectPerspective(targetId, action,
+                    this.delegateQueue);
+        }
+    }
 
-	}
+    /**
+     * Returns the target component by targetId specified in action.
+     * @param targetId
+     * @param action
+     * @return
+     */
+    private ISubComponent<EventHandler<Event>, Event, Object> getTargetComponent(final String targetId,
+                                                                                 final IAction<Event, Object> action) {
+        final ISubComponent<EventHandler<Event>, Event, Object> component = ComponentRegistry.findComponentById(targetId);
 
-	@Override
-	public final <P extends IComponent<EventHandler<Event>, Event, Object>> void handleActive(
-			final P component, final IAction<Event, Object> action) {
-		this.log(" //1.1.1.1.1// component " + action.getTargetId()
-				+ " delegate to perspective: " + this.parentId);
-		this.componentHandler.handleAndReplaceComponent(action,
-				(ISubComponent<EventHandler<Event>, Event, Object>) component);
+        if (component == null) throw new UnsupportedOperationException(
+                "invalid component id handling not supported yet. Source: "
+                        + action.getSourceId() + " target: "
+                        + action.getTargetId());
+        return component;
+    }
 
-	}
+    /**
+     * This method  assumes that the target is located in current perspective
+     * @param targetId
+     * @param action
+     */
+    private void handleMessageInCurrentPerspective(final String targetId,
+                                                   final IAction<Event, Object> action) {
+        final ISubComponent<EventHandler<Event>, Event, Object> component = getTargetComponent(targetId, action);
+        this.log(" //1.1// component message to: " + action.getTargetId());
+        this.log(" //1.1.1// component HIT: " + action.getTargetId());
+        this.handleComponentHit(targetId, action, component);
+    }
 
-	@Override
-	public final <P extends IComponent<EventHandler<Event>, Event, Object>> void handleInActive(
-			final P component, final IAction<Event, Object> action) {
-		component.setActive(true);
-		this.componentHandler.initComponent(action,
-				(ISubComponent<EventHandler<Event>, Event, Object>) component);
+    /**
+     * handle method if component was found in local context
+     *
+     * @param targetId
+     * @param action
+     * @param component
+     */
+    private void handleComponentHit(final String targetId,
+                                    final IAction<Event, Object> action,
+                                    final ISubComponent<EventHandler<Event>, Event, Object> component) {
+        if (component.isActive()) {
+            this.log(" //1.1.1.1// component HIT handle ACTIVE: "
+                    + action.getTargetId());
+            this.handleActive(component, action);
+        } // End if
+        else {
+            this.log(" //1.1.1.1// component HIT handle IN-ACTIVE: "
+                    + action.getTargetId());
+            this.handleInActive(component, action);
+        } // End else
+    }
 
-	}
 
-	@SuppressWarnings("unchecked")
-	@Override
-	public IComponentHandler<ISubComponent<EventHandler<Event>, Event, Object>, IAction<Event, Object>> getComponentHandler() {
-		return this.componentHandler;
-	}
+    @Override
+    public final <P extends IComponent<EventHandler<Event>, Event, Object>> void handleActive(
+            final P component, final IAction<Event, Object> action) {
+        this.log(" //1.1.1.1.1// component " + action.getTargetId()
+                + " delegate to perspective: " + this.parentId);
+        this.componentHandler.handleAndReplaceComponent(action,
+                (ISubComponent<EventHandler<Event>, Event, Object>) component);
 
-	@SuppressWarnings("unchecked")
-	@Override
-	public <P extends IComponent<EventHandler<Event>, Event, Object>> void setComponentHandler(
-			final IComponentHandler<P, IAction<Event, Object>> handler) {
-		this.componentHandler = (IComponentHandler<ISubComponent<EventHandler<Event>, Event, Object>, IAction<Event, Object>>) handler;
+    }
 
-	}
+    @Override
+    public final <P extends IComponent<EventHandler<Event>, Event, Object>> void handleInActive(
+            final P component, final IAction<Event, Object> action) {
+        component.setActive(true);
+        this.componentHandler.initComponent(action,
+                (ISubComponent<EventHandler<Event>, Event, Object>) component);
 
-	@Override
-	public void setMessageDelegateQueue(
-			final BlockingQueue<IDelegateDTO<Event, Object>> delegateQueue) {
-		this.delegateQueue = delegateQueue;
+    }
 
-	}
+    @SuppressWarnings("unchecked")
+    @Override
+    public IComponentHandler<ISubComponent<EventHandler<Event>, Event, Object>, IAction<Event, Object>> getComponentHandler() {
+        return this.componentHandler;
+    }
 
-	@Override
-	public void setParentId(final String parentId) {
-		this.parentId = parentId;
+    @SuppressWarnings("unchecked")
+    @Override
+    public <P extends IComponent<EventHandler<Event>, Event, Object>> void setComponentHandler(
+            final IComponentHandler<P, IAction<Event, Object>> handler) {
+        this.componentHandler = (IComponentHandler<ISubComponent<EventHandler<Event>, Event, Object>, IAction<Event, Object>>) handler;
 
-	}
+    }
+
+    @Override
+    public void setMessageDelegateQueue(
+            final BlockingQueue<IDelegateDTO<Event, Object>> delegateQueue) {
+        this.delegateQueue = delegateQueue;
+
+    }
+
+    @Override
+    public void setParentId(final String parentId) {
+        this.parentId = parentId;
+
+    }
 }
